syntax = "proto3";
package types.build;

enum BuildKind {
  Script = 0;
  Docker = 1;
  Cargo = 2;
}